fix: print color when using dark mode

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -13,12 +13,6 @@
     size: A4 portrait;
     margin: 1cm;
   }
-
-  body {
-    margin: 0;
-    -webkit-print-color-adjust: exact !important;
-    print-color-adjust: exact !important;
-  }
 }
 
 :root {
